2004-03-30  Bruno Haible  <bruno@clisp.org>

	* getloadavg.c (getloadavg): Don't assume setlocale returns
	nonnull.

2004-03-29  Paul Eggert  <eggert@twinsun.com>

	Merge changes to getloadavg.c from coreutils and Emacs.

	* getloadavg.c [!defined HAVE_SETLOCALE] (setlocale):
	Define to an expression, not to the empty string.
	Include cloexec.h and xalloc.h.
	(getloadavg): Restore LC_NUMERIC locale after setting it temporarily.
	Use set_cloexec_flag rather than rolling our own.
	* cloexec.c, cloexec.h: New files.

2004-03-18  Paul Eggert  <eggert@twinsun.com>

	* getopt.h: Sync with libc CVS.

2004-03-18  Paul Eggert  <eggert@twinsun.com>
            Bruno Haible  <bruno@clisp.org>

	* mbswidth.h: Include <wchar.h> only if HAVE_DECL_MBSWIDTH_IN_WCHAR_H,
	not on all platforms that have <wchar.h>.
	* mbswidth.c: Include <stdio.h> and <time.h> before <wchar.h>.

2004-03-09  Paul Eggert  <eggert@twinsun.com>

	* argp-parse.c, getopt.c, getopt.h, getopt1.c:
	Sync with libc CVS.
	* getopt_int.h: New file, also synced from libc.

2004-03-07  Paul Eggert  <eggert@twinsun.com>

	* c-stack.c (SIGACTION_WORKS): New macro.  Use it instead of long
	'#if' expressions.  Unlike the code it replaces, it does not
	depend on (defined _SC_PAGESIZE).  However, it does depend on
	HAVE_STRUCT_SIGACTION_SA_SIGACTION; this last change fixes a bug
	first reported by Jason Andrade in
	<http://mail.gnu.org/archive/html/bug-textutils/2003-03/msg00027.html>.

2004-01-18  Simon Josefsson  <jas@extundo.com>

	* strdup.h: New file.
	* strdup.c: Include it.
	* path-concat.c: Include strdup.h. Drop strdup declaration.
	* userspec.c: Include strdup.h. Drop strdup declaration.

2004-02-06  Karl Berry  <karl@gnu.org>

	* config.charset: update from gettext 0.14.1.

2004-02-05  Paul Eggert  <eggert@twinsun.com>

	Add comments and code, prompted by suggestions from Bruno Haible
	for sh-quote.
	* quotearg.h (quotearg_alloc): New decl.  Improve the comments
	describing the enum quoting_style values.